# predictive-ehr-benchmark

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  exploration.html  genindex.html  index.html  objects.inv  pyproject.toml  readme.html  search.html  searchindex.js  usage.html
.doctrees/: environment.pickle  exploration.doctree  index.doctree  readme.doctree  usage.doctree
.github/workflows/: push_doc.yml
_sources/: index.md.txt
data/: .gitignore
data/experiences/: complete_hospitalization_los__age_min_18__dates_2017_2022__task__length_of_stay_categorical@3_CEHR_BERT_512_pipeline__target_LOS.csv  icd10_prognosis__age_min_18__dates_2017_2022__task__prognosis@cim10lvl_1__rs_0__min_prev_0.01_CEHR_BERT_512.csv  icd10_prognosis__age_min_18__dates_2017_2022__task__prognosis@cim10lvl_1__rs_0__min_prev_0.01_CEHR_BERT_512_pipeline.csv
data/experiences/rehospitalization__age_min_18__dates_2017-01-01_2022-06-01__horizon_30_demographics_balanced_svd/: ts_30__tr_25__feat_SNDS Embeddings__estimator_ridge__searchrs_0__30598328032616010.csv
data/experiences/rehospitalization__age_min_18__dates_2017-01-01_2022-06-01__horizon_30_efficiency_compare/: ts_30__tr_100__feat_Count Encoding__estimator_ridge__searchrs_0__-2846736792079685245.csv  ts_30__tr_100__feat_Count Encoding__estimator_ridge__searchrs_0__-4158228769059799530.csv  ts_30__tr_100__feat_Count Encoding__estimator_ridge__searchrs_0__-446597303589463846.csv  ts_30__tr_100__feat_Count Encoding__estimator_ridge__searchrs_0__-6793813020166115945.csv  ts_30__tr_100__feat_Count Encoding__estimator_ridge__searchrs_0__-842807001138841084.csv  ts_30__tr_100__feat_Count Encoding__estimator_ridge__searchrs_0__-8887550746500352811.csv  ts_30__tr_100__feat_Count Encoding__estimator_ridge__searchrs_0__384187963022495013.csv  ts_30__tr_100__feat_Count Encoding__estimator_ridge__searchrs_0__6038007445298117884.csv  ts_30__tr_100__feat_Count Encoding__estimator_ridge__searchrs_0__6104463485607054914.csv  ts_30__tr_100__feat_Count Encoding__estimator_ridge__searchrs_0__7557633249814060843.csv  ts_30__tr_100__feat_SNDS Embeddings__estimator_ridge__searchrs_0__-1638126565197068729.csv  ts_30__tr_100__feat_SNDS Embeddings__estimator_ridge__searchrs_0__-7845123705413290800.csv  ts_30__tr_100__feat_SNDS Embeddings__estimator_ridge__searchrs_0__7076274900726436049.csv  ts_30__tr_100__feat_SNDS Embeddings__estimator_ridge__searchrs_0__8689450944857614255.csv  ts_30__tr_100__feat_Train Embeddings__estimator_ridge__searchrs_0__-6313007457747947587.csv  ts_30__tr_100__feat_Train Embeddings__estimator_ridge__searchrs_0__-6753437184919847350.csv  ts_30__tr_100__feat_Train Embeddings__estimator_ridge__searchrs_0__-821961065594955135.csv  ts_30__tr_100__feat_Train Embeddings__estimator_ridge__searchrs_0__-8789099563335518227.csv  (+94 more)
data/mock_data/: event.csv  measurement.csv  person.csv
data/resources/: README.md  behrt-disease-performances.csv  care_site_hierarchy_w_hospital_name.csv  hospital_codes_i2b2.csv  icd10_tree.csv  mapping_loinc2nabm_2020.csv  nabm2loinc_2020.csv  vocabulary_10p__complete_hospitalization_los__age_min_18__dates_2017-01-01_2022-06-01__task__length_of_stay_categorical@3.csv
docs/source/: conf.py  exploration.md  usage.md
medem/: __init__.py  constants.py  utils.py
medem/experiences/: cohort.py  configurations.py  pipelines.py  utils.py
medem/populations/: t1_los_population.py  t2_prognosis_population.py  t3_copy_mace_from_spark_to_local.py  t3_mace_population.py
medem/preprocessing/: quality.py  selection.py  tasks.py  utils.py
medem/reports/: describe.py  efficiency_plot.py  flowchart.py  utils.py
scripts/experiences/: cehr_bert_prepare_pretrain_dataset.py  efficiency_slurm_config.cfg  efficiency_submit.py  event2vec_from_large_cohort.py  event2vec_spark_config.cfg  los_sbatch.sh  mace_sbatch.sh  prognosis_sbatch.sh
scripts/notebooks/: 0.3_load_wo_spark.py  0.4_test_polars_cohort.py  0_Population_hospitalizations.py  README.md  benchmark_behrt.py  debug_cehr_bert_task_creation.py  export_tsne_aphp.py  export_tsne_snds.py  old_V2_nabm_hierarchy.py  old_v0_cui_mapping.py  s1_build_efficiency_expe.py  s2_build_transfer_expe.py  split_by_first_hospital_stay.py  t2_build_expe.py  t2_build_naive.py  t3_mace_build_population.py  t3_mace_test_model.py  t3_merge_visits_w_eds_scikit.py  tuto1_build_embeddings.py  tuto2_nearest_neighboors.py  v1_cui2vec_mapping.py  v2_snds_nabm2loinc.py  v3_deepmedicine_embeddings_mapping.py
scripts/reports/: .gitignore  _behrt_performances.py  _create_tables_for_paper.py  _t1_los_describe_population.py  _t1_los_report.py  _t2_cehr_bert_training_curves.py  _t2_prognosis_describe_population.py  _t2_prognosis_report.py  _t2_training_times.py  _t3_mace_describe_population.py  _t3_result_report.py  old_t2_prognosis_report.py  t3_mace_sensitivity_on_population.py
tests/: __init__.py  conftest.py  test_experiences.py  test_preprocessing.py  test_quality.py  test_tasks.py  test_utils.py
typ_report/: biblio.bib  experiences.typ  template.typ
(+207 files in other folders)
